Umstrukturierungen und weiter mit Forecasting

--- a/Text/Arbeit/Arbeit_Main.tex
+++ b/Text/Arbeit/Arbeit_Main.tex
@@ -214,7 +214,10 @@ Grafik aus \cite{Bode}, S.~2.
 \label{pic:Like_Matrix}
 \end{figure}
 
-\subsection{Öffentliche Gesundheit}
+\subsection{Gesundheit}
+
+Diese Haltung war überraschend genug, um eine Nachfrage des Journalisten
+auszulösen.
 
 % TODO
 % Google Flu Trends (vorerst gescheitert)
@@ -232,16 +235,27 @@ Grafik aus \cite{Bode}, S.~2.
 % TODO echten Titel ersinnen
 \chapter{Zusammenfassung und Fazit}
 
+% TODO Interessantes
+% inwiefern lassen sich kognitive Verzerrungen vermeiden (s. Anhang für
+%   ein Paar Betrachtungen hierzu)
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \appendix
 % TODO evtl umbennen 
 \chapter{Probablility Scoring - Vertiefung}
 
+Vollständig: Es gibt keine weitere Kategorie, in die ein Objekt (oder in diesem
+Fall ein Ereignis) fallen könnte.
+
+Gegenseitig ausschließend: ...
+
+Die menschliche Intuition ist schlecht in Wahrscheinlichkeitsrechnung.
+
 % TODO
 % Brier Score Erklärung
 % Brier Score Probleme
 %   Vorhersage unwahrscheinlicher Ereignisse nicht gewürdigt
-%   50/50 fence sitters -> unbefriedigend, Frustration (need for closure)
+%   50/50 fence sitters -> unbefriedigend, Frustration (need for closure, S. 81)
 %   % S. 276 Indiscriminate fence-sitting
 % Bayes Belief Updating Erklärung/Herleitung
 % Kognitive Verzerrungen, Auflistung, Diskussion
