Kognitive Verzerrungen ausformuliert

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -265,3 +265,22 @@ institution = {Universität Konstanz},
 url = {http://nbn-resolving.de/urn:nbn:de:bsz:352-0-402496},
 language = {ngerman}
 }
+
+@misc{Economist,
+title = {Predicting the future - Unclouded vision},
+howpublished = {The Economist},
+year = {2015},
+note = {Accessed: 15.11.2020},
+url = {https://www.economist.com/books-and-arts/2015/09/26/unclouded-vision},
+language = {english}
+}
+
+@misc{Burton,
+author = {Burton, Tara Isabella},
+title = {Could you be a ‘super-forecaster’?},
+howpublished = {BBC Future},
+year = {2015},
+note = {Accessed: 15.11.2020},
+url = {https://www.bbc.com/future/article/20150120-are-you-a-super-forecaster},
+language = {english}
+}
