--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -399,8 +399,8 @@ Solche Regeln sollten prinzipiell auch beachtet werden, allerdings sind sie
 auch weiter verbreitet und werden aus diesen Gründen hier nicht so ausführlich
 behandelt.
 } (vgl. \cite{Tetlock}, S.~301-302):
-\begin{description}
 
+\begin{description}
 \item[(1) Additive Regel (\emph{additive rule}):] \hfill \\
 Die Wahrscheinlichkeit, dass mindestens eins von zwei sich gegenseitig
 ausschließenden Ereignissen eintritt, ist die Summe der einzelnen
@@ -424,6 +424,7 @@ angepasst werden, und zwar je nachdem, ob die betrachtete Weltsicht den Eintritt
 dieses Ereignisses vorhergesagt hat oder nicht.
 
 \end{description}
+
 Die Regeln (3) und (4) basieren auf den Rechenregeln für bedingte
 Wahrscheinlichkeiten und insbesondere auf der Formel von Bayes. Ausführlichere
 Erläuterungen zu den vier Prinzipien der logischen Konsistenz befinden sich in
@@ -437,22 +438,13 @@ Weltsicht richig ist und alle anderen falsch, trotzdem haben sie ihren Ansichten
 mehr Gewicht beigemessen als angemessen gewesen wäre\footnote{
 Tetlock bezeichnet dieses Phänomen als \glqq{egozentrische Lücke}\grqq{}
 (\emph{egocentricity gap}; vgl. \cite{Tetlock}, S.~123)
-} (vgl. \cite{Tetlock}, S.~122-123). 
-% Regel 4 verletzt 127
-
-% mass market driven media like hedgehogs (S. 119)
-%-------------------------------------------------------------------------------
-Die in der Wissenschaft geschätzte Fähigkeit, mit wenigen Grundregeln oder
-Axiomen auszukommen, scheint sich in eine Schwäche zu verwandeln, wenn
-es darum geht, Prognosen für die reale Welt zu erstellen (vgl. \cite{Tetlock},
-S.~68).
-
-Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
-lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
-Arbeit bestätigt.
-
-
-
+} (vgl. \cite{Tetlock}, S.~122-123). Weiterhin war das Belief Updating der
+Experten nicht so, wie es nach der Formel von Bayes zu erwarten wäre, sodass
+auch gezeigt werden konnte, dass Regel (4) verletzt wurde (vgl. \cite{Tetlock},
+S.~126-128). Foxes waren dabei eher bereit, ihre Meinung zu ändern als
+Hedgehogs. Zudem waren alle Experten besser darin, ihre Weltsicht nach einer
+erfolgreichen Prognose aufzuwerten, als diese nach einer misslungenen Prognose
+abzuwerten.
 
 \begin{table}
 \centering
@@ -464,55 +456,127 @@ Arbeit bestätigt.
 \textbf{Bezeichnung der kognitiven Verzerrung} & \textbf{Sinngemäße Übersetzung}
   & \textbf{Kurzbeschreibung} \\
 \hline
-{ \large \emph{Anchoring} } & Ankereffekt
+{ \large Anchoring } & Ankereffekt
   & Beharren auf einer ersten \\
 & & Schätzung eines Wertes; \\
 & & unzureichende Anpassung\\
 & & nach weiterem Überlegen.\\
 \hline
-{ \large \emph{Attribution bias} } & Zuschreibungsfehler
+{ \large Attribution bias } & Zuschreibungsfehler
   & Die Tendenz, Erfolge \\
 & & seinen eigenen Fähigkeiten \\
 & & zuzuschreiben; \\
 & & Misserfolge hingegen \\
 & & externen Zuständen. \\
 \hline
-{ \large \emph{Availability bias} } & Verfügbarkeitsfehler
+{ \large Availability bias } & Verfügbarkeitsfehler
   & Beispiele für Szenarien, \\
 & & die unmittelbar mit einem \\
 & & Ereignis assoziiert werden, \\
 & & bestimmen die Einschätzung \\
 & & dieses Ereignisses. \\
 \hline
-{ \large \emph{Base rate neglect} } & Vernachlässigung von Basisraten
+{ \large Base rate neglect } & Vernachlässigung von Basisraten
   & Vernachlässigung allgemeiner \\
 & & Wahrscheinlichkeiten und \\
 & & Konzentration auf fallspezifische \\
 & & Informationen. \\
 \hline
-{ \large \emph{Cognitive conservatism} } & Kognitiver Konservatismus
+{ \large Cognitive conservatism } & Kognitiver Konservatismus
   & Weigerung von Menschen, \\
 & & Fehler zuzugeben und \\
 & & ihre Meinung zu ändern. \\
 \hline
-{ \large \emph{Gambler's fallacy} } & Irrtum des Glücksspielers
+{ \large Gambler's fallacy } & Irrtum des Glücksspielers
   & Der irrtümliche Glaube an \\
 & & regelmäßige Muster \\ 
 & & in zufälligen Prozessen. \\
 \hline
-{ \large \emph{Hindsight bias} } & Rückschaufehler
+{ \large Hindsight bias } & Rückschaufehler
   & Der Versuch eine Einschätzung \\
 & & eines Ereignisses, nach dessen \\
 & & Eintreten, rückwirkend zu \\
 & & verändern. \\
 \hline
-{ \large \emph{Overconfidence effect} } & Selbstüberschätzung
+{ \large Overconfidence effect } & Selbstüberschätzung
   & Überschätzung der Richtigkeit \\
 & & eigener Urteile. \\
 \hline
 \end{tabular}
 }
 \end{table}
+
+Tetlock benennt einige kognitive Verzerrungen (\emph{cognitive biases}),
+die ursächlich für das Versagen der Experten waren. Bei kognitiven Verzerrungen
+handelt es sich im Allgemeinen um Fehler im menschlichen Denken, die zu
+Fehlinterpretationen und Fehlurteilen führen.
+Tabelle~\ref{tab:Kognitive_Verzerrungen} listet einige Beipiele für kognitive
+Verzerrungen auf, die in diesem thematischen Kontext interessant sind und zur
+Erläuterung des Begriffs dienen können. Mehr Informationen zu kognitiven
+Verzerrungen befinden sich in Anhang~\xcom, während einige für das Forecasting
+besonders relevante kognitive Verzerrungen gleich hier erläutert werden.
+
+So kann das nicht angemessene Belief Updating der Experten mit kognitivem
+Konservatismus (\emph{cognitive conservatism}) und Zuschreibungsfehlern 
+(\emph{attribution bias}) erklärt werden (vgl. \cite{Tetlock}, S.~128).
+Cognitive Conservatism beschreibt dabei die Weigerung von Menschen, ihre Fehler
+zuzugeben und ihre Meinungen zu revidieren. Beim Attribution Bias handelt es
+sich um die Tendenz von Menschen, Erfolge sich selbst, Misserfolge jedoch
+externen Ursachen (z. B. Pech) zuzuschreiben.
+
+Zudem waren die Experten anfällig für Rückschaufehler (\emph{hindsight bias}).
+Alle Experten, aber insbesondere die Hedgehogs, neigten rückwirkend dazu, das Ausmaß ihrer
+eigenen Fehler zu vernachlässigen und das Ausmaß der von ihren Rivalen gemachten Fehler zu
+übertreiben\footnote{
+Überspitzt formuliert haben die Experten ihre eigenen Fehler vergessen, während
+sie dem Rivalen Fehleinschätzungen hinzugedichtet haben.
+} (vgl. \cite{Tetlock}, S.~138-139).
+
+Wieterhin waren die Experten sehr geschickt darin, die Resultate der Forecasting
+Exercises anzuzweifeln. So nutzten sie eine Reihe von Erklärungsmustern
+(\emph{belief system defenses}), um ihre schlechten Leistungen zu rechtfertigen
+(vgl. \cite{Tetlock}, S.~129). Ein Beispiel für eine solche
+Rechtfertigungstaktik ist die Theorie des \glqq{exogenenen Schocks}\grqq{}
+(\emph{exogenous-shock defense}; vgl. \cite{Tetlock}, S.~131). Diese
+Rechtfertigungstaktik basiert darauf, dass ...
+
+Eine weitere kognitive Verzerrung,
+die hohe Relevanz in Tetlocks Studie hatte, war der Effekt der
+Selbstüberschätzung (\emph{overconfidence effect}), die Tendenz von Personen ihre
+eigene Urteilskraft zu überschätzen. Insbesondere Experten sind
+anfällig dafür, diese Art von Fehler zu machen. Denn Expertise in einem
+Fachbereich verbessert zwar die Zuverlässigkeit der Vorhersagen, verstärkt aber
+die Selbstüberschätzung, sodass in der Summe, zumindest was Tetlocks Studien
+angeht, ein schlechteres Ergebnis resultiert (vgl. \cite{Tetlock}, S.~161).
+Unglücklicherweise wurde hierbei auch eine inverse Beziehung zwischen der
+Genauigkeit ihrer Prognosen und der Attraktivität von Experten für Medien und andere 
+Konsumenten von Expertenmeinungen festgestellt (vgl. \cite{Tetlock}, S.~217-218).
+Dabei waren die Hedgehogs mit der schlechtesten Treffergenauigkeit bei ihren
+Vorhersagen gleichzeitig die größten Favoriten der Medien, bei denen sie mit
+kühnen Prognosen punkten konnten. In den seltenen Fällen, in denen die Genauigkeit
+dieser Prognosen angezweifelt wird, können sich die Experten mit ihren zahlreichen
+Erklärungstaktiken (\emph{belief system defenses}) aus der Schusslinie bringen.
+
+Insgesamt hat sich die eher starre Denkweise der Hedgehogs bei den Forecasting
+Exercises als Nachteil gegenüber der Flexibilität der Foxes herausgestellt. 
+Die in der Wissenschaft geschätzte Fähigkeit, mit wenigen Grundregeln oder
+Axiomen auszukommen, scheint sich in eine Schwäche zu verwandeln, wenn
+es darum geht, Prognosen für die reale Welt zu erstellen (vgl. \cite{Tetlock},
+S.~68).
+
+Eisenführ und Weber erwähnten in ihrem Buch über rationales Entscheiden die Gefahr,
+dass Menschen ihre Urteilskraft überschätzen und sich durch
+Wunschdenken leiten lassen können (vgl. \cite{Eisenfuehr}, S.~181). 
+Dies gilt, wie Tetlock gezeigt hat, auch für hoch dekorierte Experten.
+
+%Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
+%lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
+%Arbeit bestätigt.
+
+
+
+
+
 
 \subsection{Nachwirkungen von Tetlocks Forschungsergebnissen}
 
@@ -524,6 +588,10 @@ Arbeit bestätigt.
 % - Brier Score: große Zahlen -> Evidence
 % - Bayes + einfache Statistische Regeln als Hilfswerkzeug
 % - besser fox als hedgehog sein
+O\footnote{
+Dies wird auch oft in Artikeln erwähnt, die über Forecasting berichten (vgl.
+\cite{Economist} und \cite{Burton})
+}
 % - Versuchen Kognitive Verzerrungen abzumildern
 % - no thought above criticism (S. 102, 118)
 % - fördert bescheidenheit, beugt overconfidence vor (S. 104)
@@ -784,3 +852,6 @@ beigemessen. Dies kann dazu führen, dass Risiken falsch kalkuliert werden und
 in der Zukunft nicht genügend Handlungsoptionen zur Verfügung stehen.
 
 \section{Kritische Würdigung von Forecasting und Predictive Analytics}
+
+% short term predictions are possible and reasonably accurate (s. unclouded vision)
+% like weather forecasts
