--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -284,3 +284,12 @@ note = {Accessed: 15.11.2020},
 url = {https://www.bbc.com/future/article/20150120-are-you-a-super-forecaster},
 language = {english}
 }
+
+@book{Poundstone,
+author = {Poundstone, William},
+title = {Prisoner's Dilemma},
+publisher = {Anchor Books},
+year = {1993},
+isbn = {0-385-41580-X},
+language = {english}
+}
