--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -537,8 +537,22 @@ Exercises anzuzweifeln. So nutzten sie eine Reihe von Erklärungsmustern
 (\emph{belief system defenses}), um ihre schlechten Leistungen zu rechtfertigen
 (vgl. \cite{Tetlock}, S.~129). Ein Beispiel für eine solche
 Rechtfertigungstaktik ist die Theorie des \glqq{exogenenen Schocks}\grqq{}
-(\emph{exogenous-shock defense}; vgl. \cite{Tetlock}, S.~131). Diese
-Rechtfertigungstaktik basiert darauf, dass ...
+(\emph{exogenous-shock defense}; vgl. \cite{Tetlock}, S.~131). Bei dieser
+Rechtfertigungstaktik argumentiert der Experte, dass seine Theorie und damit
+auch seine Vorhersage zwar prinzipiell richtig war, jedoch haben unberechenbare,
+externe Ereignisse dazu geführt, dass die Prognose sich nicht erfüllt. Diese
+externen Ereignisse, so argumentieren die betroffenen Experten, konnten von
+ihnen unmöglich in die Analyse einbezogen werden\footnote{
+Weil diese zusätzlichen Variablen grundsätzlich unberechenbar sind, oder 
+innerhalb ihres Fachgebietes nicht behandelt werden etc.
+}. Ein weiteres Beispiel ist das Argument des \glqq{schlechten Timings}\grqq{}
+(\emph{just-off-on-timing defense}; vgl. \cite{Tetlock}, S.~134). Das
+vorhergesagte Ereignis sei zwar nicht innerhalb der betrachteten Zeitspanne 
+eingetreten, jedoch sei es, nach der festen Überzeugung des Experten, nur eine
+Frage der Zeit bis es schließlich doch Realität wird. Diese Belief System
+Defenses sind zwar keine kognitiven Verzerrungen, sie dienen jedoch dazu die
+Fehleinschätzungen der Experten zu verschleiern und damit ihre Reputation zu
+bewahren.
 
 Eine weitere kognitive Verzerrung,
 die hohe Relevanz in Tetlocks Studie hatte, war der Effekt der
@@ -554,7 +568,7 @@ Konsumenten von Expertenmeinungen festgestellt (vgl. \cite{Tetlock}, S.~217-218)
 Dabei waren die Hedgehogs mit der schlechtesten Treffergenauigkeit bei ihren
 Vorhersagen gleichzeitig die größten Favoriten der Medien, bei denen sie mit
 kühnen Prognosen punkten konnten. In den seltenen Fällen, in denen die Genauigkeit
-dieser Prognosen angezweifelt wird, können sich die Experten mit ihren zahlreichen
+ihrer Prognosen angezweifelt wird, können sich die Experten mit ihren zahlreichen
 Erklärungstaktiken (\emph{belief system defenses}) aus der Schusslinie bringen.
 
 Insgesamt hat sich die eher starre Denkweise der Hedgehogs bei den Forecasting
@@ -569,17 +583,24 @@ dass Menschen ihre Urteilskraft überschätzen und sich durch
 Wunschdenken leiten lassen können (vgl. \cite{Eisenfuehr}, S.~181). 
 Dies gilt, wie Tetlock gezeigt hat, auch für hoch dekorierte Experten.
 
-%Insgesamt wird die Befürchtung, dass sich Menschen durch Wunschdenken leiten
-%lassen (vgl. \cite{Eisenfuehr}, S.~181) und dass sie das oft tun, von Tetlocks
-%Arbeit bestätigt.
-
-
-
-
-
-
 \subsection{Nachwirkungen von Tetlocks Forschungsergebnissen}
 
+% TODO
+% GJP -> Ergebnisse zusammengefasst in 'Superforecasting'
+% - finanziert von IARPA
+% - Forecaster selektiert (bunte Truppe)
+% - angetreten gegen Nachrichtendienstanalysten
+
+% IARPA
+% Intelligence Advanced Research Projects Activity (IARPA)
+% Organisation zur Finanzierung von Forschungsprojekten, von denen die US-Nachrichtendienste
+% profitieren können
+
+% Good Judgement Inc
+% Öffentliche Forecasts
+% Bild Beispielfrage Forecasting
+
+% Roman aus Zeit teil davon
 
 \subsection{Grundprinzipien des Forecasting}
 
@@ -597,6 +618,7 @@ Dies wird auch oft in Artikeln erwähnt, die über Forecasting berichten (vgl.
 % - fördert bescheidenheit, beugt overconfidence vor (S. 104)
 % - wenn möglich komplexere statistische Algorithmen verwenden
 
+% 11 Commandments auch wichtig, machen obige Punkte aber nicht obsolet
 ..., also \gls{glos:Predictive_Analytics} zu implementieren.
 
 \section{Bestandteile von Predictive Analytics}
