--- a/Text/Arbeit/Inhalt/POES_Intro.tex
+++ b/Text/Arbeit/Inhalt/POES_Intro.tex
@@ -5,7 +5,8 @@
 %   unterstützt)
 % Abgrenzung zum privaten Sektor
 % auf operativer Ebene allerdings ähnlich
-
+% unterschied strategisch, taktische Ebene, operativ
+% top management, mittleres management, operatives management 
 % s. Watson, Abschnitt Lack of regulation and algorithm bias
 % TODO bias insgesamt (in Rahmenbedingungen)
 \begin{figure}%[!hbt]
@@ -17,7 +18,16 @@
 
 \section{Rahmenbedingungen}
 
+% TODO Technologie prinzipiell kein Hindernis (s. IT Novum)
+
 % TODO
+% Politiker, Experten und Kommentatoren formulieren keine subjektiven Wsk und
+% niemand berechnet den Brier Score (oder ein anderes Maß)
+% Widerstände auf strat und takt Ebene gegen Forecasting und PA
+% Forecasting und PA nicht auf dem Vormarsch
+% Forecasting leichter zu sehen,
+% PA auf operativer Ebene (Tabellenkalkulation) verschleiert Widerstand auf
+% takt und strategischer Ebene (!)
 % Rahmenbedingungen:
 % - Wahrheit taktisch genutzt
 % - versch. Gruppen/Kulturen -> versch. Wahrheiten
