Nachwirkungen Tetlock ausgeführt

--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -293,3 +293,20 @@ year = {1993},
 isbn = {0-385-41580-X},
 language = {english}
 }
+
+@book{Super,
+author = {Tetlock, Philip and Gardner, Dan},
+title = {Superforecasting : the art and science of prediction},
+publisher = {Crown Publishers},
+year = {2015},
+isbn = {978-0-8041-3669-3},
+language = {english}
+}
+
+@misc{GJP_Ink,
+title = {See the future sooner},
+howpublished = {Homepage von Good Judgment Inc.},
+note = {Accessed: 16.11.2020},
+url = {https://goodjudgment.com/},
+language = {english}
+}
