--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -585,16 +585,33 @@ Dies gilt, wie Tetlock gezeigt hat, auch für hoch dekorierte Experten.
 
 \subsection{Nachwirkungen von Tetlocks Forschungsergebnissen}
 
-% TODO
-% GJP -> Ergebnisse zusammengefasst in 'Superforecasting'
-% - finanziert von IARPA
-% - Forecaster selektiert (bunte Truppe)
-% - angetreten gegen Nachrichtendienstanalysten
+Nach der Veröffentlichung von \emph{Expert Political Judgement} wurde das
+\emph{Good Judgement Project} (GJP) im Jahr 2011 ins Leben gerufen\footnote{
+Das GJP wurde von der IARPA (\emph{Intelligence Advanced Research Projects
+Activity}) Behörde finanziert, die Forschungsprojekte
+unterstützt, von denen US-Nachrichtendienste profitieren können (vgl. \cite{Burton}).
+} (vgl. \cite{Jackson}, S.~292). Dabei handelte es sich um einen 4-jährigen Wettkampf, bei dem
+Freiwillige ähnliche Forecasting Exercises bearbeiten konnten wie die Experten
+in Tetlocks vorheriger Studie. Dabei wurden 2~\% der insgesamt 2800 Teilnehmer identifiziert, 
+deren Vorhersagegenauigkeit über einen konstanten Zeitraum
+mindestens 30~\%  über dem Durchschnitt lag (vgl. \cite{Roetheli}, S.~256). Anschließend wurde eine Gruppe
+aufgebaut, die aus den Teilnehmern mit den besten Ergebnissen bestand. Diese
+Gruppe trat dann in einer weiteren Runde von Forecasting Exercises gegen
+Analystenteams der Nachrichtendienste an. Dabei konnte die Gruppe der Forecaster
+die Nachrichtendienste deutlich schlagen (vgl. \cite{Roche}, S.~144). Die Personen
+die sich zu den besten Forecastern zählen dürfen, bilden eine Gruppe, die überraschenderweise sehr heterogen ist.
+So befinden sich unter ihnen Hausfrauen, arbeitslose
+Fabrikarbeiter und Mathematikprofessoren. Was sie alle vereint ist ihr Denkstil,
+denn die überragenden Forecaster sind ohne Ausnahme Foxes (vgl. \cite{Economist}).
 
-% IARPA
-% Intelligence Advanced Research Projects Activity (IARPA)
-% Organisation zur Finanzierung von Forschungsprojekten, von denen die US-Nachrichtendienste
-% profitieren können
+Die Ergebnisse des Good Judgement Project wurden von Tetlock und Gardner
+in dem Buch \emph{Superforecasting: the art and science of prediction} festgehalten (siehe \cite{Super}).
+Zu dem Kern des Buches gehören zehn\footnote{Eigentlich sind es elf Prinzipien (vgl. z. B. \cite{Jackson}, S.~292).}
+Prinzipien, die beschreiben, was einen guten Forecaster ausmacht (\emph{The Ten Commandments of Superforecasting};
+vgl. \cite{Jackson}, S.~292). Im Anhang~\xcom werden diese Prinzipien vorgestellt und diskutiert.
+
+Zudem existiert ein Unternehmen, das sich auf die Ergebnisse des Good Judgement Project bezieht,
+Teams von Forecastern beschäftigt und ihre Prognosen verkauft, \emph{Good Judgment Inc.} (vgl. \cite{GJP_Ink}).
 
 % Good Judgement Inc
 % Öffentliche Forecasts
