--- a/Text/Arbeit/Bibliographie/Bibli.bib
+++ b/Text/Arbeit/Bibliographie/Bibli.bib
@@ -310,3 +310,21 @@ note = {Accessed: 16.11.2020},
 url = {https://goodjudgment.com/},
 language = {english}
 }
+
+@misc{GJP_Ink_F,
+title = {Public SuperforecastsForecasts from Good Judgment's Professional Superforecasters},
+howpublished = {Good Judgment Inc.},
+note = {Accessed: 16.11.2020},
+url = {https://goodjudgment.io/superforecasts/#1430},
+language = {english}
+}
+
+@misc{Juergs,
+author = {Jürgs, Alexander},
+title = {Auch Superprognostiker liegen mal daneben},
+howpublished = {Frankfurter Allgemeine Zeitung},
+year = {2020},
+note = {Zugegriffen am: 03.05.2020},
+url = {https://www.faz.net/aktuell/rhein-main/corona-optimist-auch-superprognostiker-liegen-mal-daneben-16751444.html},
+language = {ngerman}
+}
