--- a/Text/Arbeit/Inhalt/Konzepte_PA.tex
+++ b/Text/Arbeit/Inhalt/Konzepte_PA.tex
@@ -540,17 +540,17 @@ Rechtfertigungstaktik ist die Theorie des \glqq{exogenenen Schocks}\grqq{}
 (\emph{exogenous-shock defense}; vgl. \cite{Tetlock}, S.~131). Bei dieser
 Rechtfertigungstaktik argumentiert der Experte, dass seine Theorie und damit
 auch seine Vorhersage zwar prinzipiell richtig war, jedoch haben unberechenbare,
-externe Ereignisse dazu geführt, dass die Prognose sich nicht erfüllt. Diese
+externe Ereignisse dazu geführt, dass die Prognose sich nicht erfüllt hat. Diese
 externen Ereignisse, so argumentieren die betroffenen Experten, konnten von
 ihnen unmöglich in die Analyse einbezogen werden\footnote{
-Weil diese zusätzlichen Variablen grundsätzlich unberechenbar sind, oder 
-innerhalb ihres Fachgebietes nicht behandelt werden etc.
+Denn diese zusätzlichen Variablen seien grundsätzlich unberechenbar oder würden
+innerhalb ihres Fachgebietes nicht behandelt, usw.
 }. Ein weiteres Beispiel ist das Argument des \glqq{schlechten Timings}\grqq{}
 (\emph{just-off-on-timing defense}; vgl. \cite{Tetlock}, S.~134). Das
 vorhergesagte Ereignis sei zwar nicht innerhalb der betrachteten Zeitspanne 
 eingetreten, jedoch sei es, nach der festen Überzeugung des Experten, nur eine
 Frage der Zeit bis es schließlich doch Realität wird. Diese Belief System
-Defenses sind zwar keine kognitiven Verzerrungen, sie dienen jedoch dazu die
+Defenses sind zwar keine kognitiven Verzerrungen, sie dienen jedoch dazu, die
 Fehleinschätzungen der Experten zu verschleiern und damit ihre Reputation zu
 bewahren.
 
@@ -601,7 +601,7 @@ Analystenteams der Nachrichtendienste an. Dabei konnte die Gruppe der Forecaster
 die Nachrichtendienste deutlich schlagen (vgl. \cite{Roche}, S.~144). Die Personen
 die sich zu den besten Forecastern zählen dürfen, bilden eine Gruppe, die überraschenderweise sehr heterogen ist.
 So befinden sich unter ihnen Hausfrauen, arbeitslose
-Fabrikarbeiter und Mathematikprofessoren. Was sie alle vereint ist ihr Denkstil,
+Fabrikarbeiter und Mathematikprofessoren. Was sie alle vereint, ist ihr Denkstil,
 denn die überragenden Forecaster sind ohne Ausnahme Foxes (vgl. \cite{Economist}).
 
 Die Ergebnisse des Good Judgement Project wurden von Tetlock und Gardner
@@ -612,6 +612,31 @@ vgl. \cite{Jackson}, S.~292). Im Anhang~\xcom werden diese Prinzipien vorgestell
 
 Zudem existiert ein Unternehmen, das sich auf die Ergebnisse des Good Judgement Project bezieht,
 Teams von Forecastern beschäftigt und ihre Prognosen verkauft, \emph{Good Judgment Inc.} (vgl. \cite{GJP_Ink}).
+Ihre Forecaster, die außerordentliche Leistungen erzielen, werden \emph{Superforecaster}\footnote{
+Den Begriff \emph{Superforecaster} hat Good Judgement Inc schützen lassen (vgl. \cite{Super}).
+} oder informell auch \emph{Supers} genannt (vgl. \cite{Burton}).
+
+Gelegentlich werden Superforecaster interviewt, wobei sie Einblicke in diesen
+relativ neuen Berufszweig geben. So verrät Reed Roberts in einem Interview,
+dass Foxes wie er bessere Forecaster seien (vgl. \cite{Burton}). Weiterhin erklärt sein Kollege Nick Hare im
+gleichen Artikel, wie er ein mathematische Modell erstellt, um die Wahrscheinlichkeit von Nukleartests in
+Nordkorea abzuschätzen\footnote{ 
+Dieses Modell wird noch auf Seite~\xcom genauer diskutiert.
+} (vgl. \cite{Burton}). Roman Hagelstein, ein weiterer Superforecaster,
+erläutert in einem \emph{FAZ}-Artikel, wie man ein komplexes Problem in kleinere Teilprobleme zerlegen kann, um
+es besser zu verstehen (vgl. \cite{Juergs}). Dabei handelt es sich um das zweite Prinzip des Forecasting
+(\emph{commandment of superforecasting}; vgl. \cite{Jackson}). Hagelstein selbst 
+sei ein \glqq{Informationsjunkie}\grqq{}, der aus möglichst vielen, diversen
+Quellen seine Informationen bezieht (vgl. \cite{Juergs}).
+
+
+\emph{Good Judgment Inc.} veröffentlicht auch einen Teil ihrer Vorhesagen, sodass diese
+allgemein einsehbar sind (\emph{public superforecasts}; vgl. \cite{GJP_Ink}).
+Abbildung~\xcom zeigt ein Beispiel für eine solche Prognose\footnote{
+Die Grafik gibt eine öffentliche Prognose vom 16.11.2020 zum Thema COVID-19 wider (vgl. \cite{GJP_Ink_F}).
+% charakteristiken: zeitbegrenzung, gegenseitig ausschließende und vollständige Antwortvarianten,
+% subjektive Wahrscheinlichkeiten ergänzen sich zu 100%
+}.
 
 % Good Judgement Inc
 % Öffentliche Forecasts
@@ -816,6 +841,20 @@ Nachbearbeitung & Interpretation der Ergebnisse \\
 % TODO
 % Beschreibung / Visualisierung der Daten
 % 
+\subsubsection{Beschreibung der Daten}
+
+% Korrelationsanalyse
+
+Neben der Berechnung der Korrelation gibt es noch eine Reihe weiterer, spezieller
+Methoden zur Beschreibung der Daten. Ein Beispiel dafür ist die Varianzanalyse
+(\emph{analysis of variance}; abgekürzt \emph{ANOVA}). Dabei wird der Einfluss
+von mehreren Faktoren (diskrete Variablen) und deren Wechselwirkungen auf eine
+kontinuierliche, abhängige Variable untersucht\footnote{
+Ursprünglich wurde die Varianzanalyse für die Landwirtschaft entwickelt. Die
+typischen Faktoren waren dann die Art des Düngemittels, die Pflanzengattung oder
+die Art der Bewässerung, während der Ertrag die abhängige Variable darstellte
+(vgl. \cite{Bijma}, S.~275).
+} (vgl. \cite{Bijma}, S.~275-276).
 
 \subsubsection{Die Großen Drei}
 
